--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					</p>
 					
 					<h1>Log In</h1>
-					<input type="text" value="Username" />
+					<input type="text" value="actualTEST" />
 					<br />
 					<input name="" type="password" value="Password" />
 					<br />
