--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Black-Themed Website</title>
+    <title>Welcome to my Bio!</title>
     <style>
         body {
             background-color: black;
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            text-align: center;
+            text-align: left;
         }
         h1 {
             font-size: 3em;
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to my Bio!</h1>
         <p>This is a simple black-themed website.</p>
     </div>
 </body>
