--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my Bio!</title>
+    <title>My GitHub-Themed Website</title>
     <style>
         body {
-            background-color: black;
-            color: white;
+            background-color: #0d1117; /* GitHub's dark gray background color */
+            color: #c9d1d9; /* GitHub's light gray text color */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -15,7 +15,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            text-align: left;
+            text-align: center;
         }
         h1 {
             font-size: 3em;
@@ -29,8 +29,9 @@
 </head>
 <body>
     <div>
-        <h1>Welcome to my Bio!</h1>
-        <p>This is a simple black-themed website.</p>
+        <h1>Welcome to My GitHub-Themed Website</h1>
+        <p>This is a simple website with a GitHub-style background.</p>
     </div>
 </body>
 </html>
+
