--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            flex-direction: column;
+        }
+        .search-bar {
+            width: 50%;
+            margin-bottom: 1em;
+            display: flex;
+            justify-content: center;
+        }
+        .search-bar input {
+            width: 100%;
+            padding: 10px;
+            font-size: 1em;
+            border: 1px solid #30363d;
+            border-radius: 6px;
+            background-color: #161b22;
+            color: #c9d1d9;
         }
         h1 {
             font-size: 3em;
@@ -31,6 +47,9 @@
             flex: 1;
             font-size: 1.5em;
             text-align: left;
+            border: 1px solid #30363d; /* Thin box around the "About me" section */
+            padding: 10px;
+            border-radius: 6px;
         }
         .right {
             flex: 2;
@@ -47,6 +66,9 @@
     </style>
 </head>
 <body>
+    <div class="search-bar">
+        <input type="text" placeholder="Search...">
+    </div>
     <div class="container">
         <div class="left">
             <p>About me:</p>
