--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             height: 100vh;
-            flex-direction: column;
         }
         .search-bar {
             width: 50%;
+            margin-top: 1em;
             margin-bottom: 1em;
-            display: flex;
-            justify-content: center;
         }
         .search-bar input {
             width: 100%;
@@ -69,6 +67,7 @@
     <div class="search-bar">
         <input type="text" placeholder="Search...">
     </div>
+    <h1>Welcome to my Bio!</h1>
     <div class="container">
         <div class="left">
             <p>About me:</p>
@@ -78,9 +77,7 @@
                 <li>Discord: Dev1ss0</li>
             </ul>
         </div>
-        <div class="right">
-            <h1>Welcome to my Bio!</h1>
-        </div>
+        <div class="right"></div>
     </div>
 </body>
 </html>
