--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My GitHub-Themed Website</title>
     <style>
+        @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
+
         body {
             background-color: #0d1117; /* GitHub's dark gray background color */
             color: #c9d1d9; /* GitHub's light gray text color */
@@ -16,10 +18,16 @@
             align-items: center;
             height: 100vh;
         }
-        .search-bar {
+        .search-bar-container {
             width: 50%;
             margin-top: 1em;
             margin-bottom: 1em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .search-bar {
+            flex-grow: 1;
         }
         .search-bar input {
             width: 100%;
@@ -30,6 +38,26 @@
             background-color: #161b22;
             color: #c9d1d9;
         }
+        .social-buttons {
+            display: flex;
+            gap: 0.5em;
+            margin-left: 0.5em;
+        }
+        .social-buttons a {
+            text-decoration: none;
+            font-size: 1.5em;
+            color: #c9d1d9;
+            background-color: #161b22;
+            border: 1px solid #30363d;
+            padding: 8px;
+            border-radius: 6px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .social-buttons a:hover {
+            background-color: #30363d;
+        }
         h1 {
             font-size: 3em;
             margin: 0.5em 0;
@@ -39,7 +67,9 @@
         .container {
             display: flex;
             align-items: flex-start;
-            width: 80%;
+            width: 60%; /* Smaller container width */
+            max-width: 600px; /* Set a maximum width */
+            margin-top: 20px;
         }
         .left {
             flex: 1;
@@ -64,8 +94,18 @@
     </style>
 </head>
 <body>
-    <div class="search-bar">
-        <input type="text" placeholder="Search...">
+    <div class="search-bar-container">
+        <div class="search-bar">
+            <input type="text" placeholder="Search...">
+        </div>
+        <div class="social-buttons">
+            <a href="https://youtube.com" target="_blank">
+                <i class="fab fa-youtube"></i>
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
     </div>
     <h1>Welcome to my Bio!</h1>
     <div class="container">
