--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         .container {
             display: flex;
             align-items: flex-start;
-            width: 80%; /* Reverted to previous size */
-            max-width: 800px; /* Set a maximum width */
+            width: 60%; /* Adjusted size */
+            max-width: 700px; /* Set a maximum width */
             margin-top: 20px;
             margin-left: 0; /* Align to the left */
             justify-content: flex-start; /* Align to the left */
@@ -79,11 +79,12 @@
         }
         .left {
             flex: 1;
-            font-size: 1.5em;
+            font-size: 1.2em; /* Smaller font size */
             text-align: left;
             border: 1px solid #30363d; /* Thin box around the "About me" section */
             padding: 10px;
             border-radius: 6px;
+            color: #a0aab3; /* Slightly darker and less bright text color */
         }
         .right {
             flex: 2;
@@ -92,7 +93,7 @@
         ul {
             list-style-type: none;
             padding-left: 0;
-            font-size: 1.2em;
+            font-size: 1em; /* Smaller font size for list items */
         }
         li {
             margin-bottom: 0.5em;
