--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             width: 60%; /* Adjusted size */
             max-width: 700px; /* Set a maximum width */
             margin-top: 20px;
-            margin-left: 0; /* Align to the left */
+            margin-left: -5%; /* Push the container further to the left */
             justify-content: flex-start; /* Align to the left */
             position: relative; /* Ensure it stays in place */
         }
