--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             max-width: 700px; /* Set a maximum width */
             margin-top: 20px;
             position: absolute; /* Position the container absolutely */
-            left: 0; /* Align to the far left */
-            top: 100px; /* Adjust the top position if necessary */
+            left: 50%; /* Center horizontally */
+            transform: translateX(-50%); /* Adjust for the width of the container */
         }
         .left {
             flex: 1;
