--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             max-width: 700px; /* Set a maximum width */
             margin-top: 20px;
             position: absolute; /* Position the container absolutely */
-            left: 50%; /* Center horizontally */
-            transform: translateX(-50%); /* Adjust for the width of the container */
+            left: 20%; /* Offset from the left by 20% */
+            transform: translateX(0); /* No need for translation here */
         }
         .left {
             flex: 1;
