--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev1ss0's Bio!</title>
+    <title>My GitHub-Themed Website</title>
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
@@ -76,7 +76,8 @@
             margin-top: 20px;
             position: absolute; /* Position the container absolutely */
             left: 20%; /* Offset from the left by 20% */
-            transform: translateX(0); /* No need for translation here */
+            top: 45%; /* Move down a little above the vertical center */
+            transform: translateY(-50%); /* Center vertically relative to its own height */
         }
         .left {
             flex: 1;
@@ -129,3 +130,4 @@
     </div>
 </body>
 </html>
+
