--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             max-width: 700px; /* Set a maximum width */
             margin-top: 20px;
             position: absolute; /* Position the container absolutely */
-            left: 20%; /* Offset from the left by 20% */
+            left: 15%; /* Move the container slightly to the left */
             top: 45%; /* Move down a little above the vertical center */
             transform: translateY(-50%); /* Center vertically relative to its own height */
         }
@@ -130,4 +130,3 @@
     </div>
 </body>
 </html>
-
