--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev1ss0' Bio!</title>
+    <title>My GitHub-Themed Website</title>
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
@@ -71,11 +71,11 @@
         .container {
             display: flex;
             align-items: flex-start;
-            width: 70%; /* Expanded size */
-            max-width: 800px; /* Increased maximum width */
+            width: 80%; /* Expanded size */
+            max-width: 900px; /* Increased maximum width */
             margin-top: 20px;
             position: absolute; /* Position the container absolutely */
-            left: 40%; /* Move the container further to the left */
+            left: 30%; /* Position kept the same */
             top: 45%; /* Move down a little above the vertical center */
             transform: translateY(-50%); /* Center vertically relative to its own height */
         }
@@ -130,4 +130,3 @@
     </div>
 </body>
 </html>
-
