blacken it up :fire:

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
             top: 45%; /* Move down a little above the vertical center */
             transform: translateY(-50%); /* Center vertically relative to its own height */
             box-sizing: border-box; /* Include padding and border in the element's total width and height */
+            background-color: #161b22; /* Darker background color for the container */
+            padding: 10px; /* Add some padding */
         }
         .left {
             flex: 1;
@@ -88,6 +90,7 @@
             padding: 10px;
             border-radius: 6px;
             color: #a0aab3; /* Slightly darker and less bright text color */
+            background-color: #0d1117; /* Darker background for the "About me" section */
             box-sizing: border-box; /* Include padding and border in the element's total width */
         }
         .right {
