--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         .container {
             display: flex;
             align-items: flex-start;
-            width: 100%; /* Fill the entire screen width */
-            max-width: 100%; /* Ensure it doesn't exceed the viewport width */
-            margin-top: 20px;
+            width: 100vw; /* Full viewport width */
+            height: auto; /* Adjust height based on content */
             position: absolute; /* Position the container absolutely */
             left: 0; /* Align to the left edge */
             top: 45%; /* Move down a little above the vertical center */
