--- a/index.html
+++ b/index.html
@@ -91,9 +91,14 @@
             padding: 20px; /* Increase padding for better spacing */
         }
 
-        .right {
-            flex: 1;
-            text-align: center;
+        .about-box {
+            background-color: #161b22; /* Darker background for the "About me" section */
+            border-radius: 10px; /* Rounded corners */
+            padding: 15px; /* Padding inside the box */
+            border: 1px solid #30363d; /* Border to match the theme */
+            color: #a0aab3; /* Slightly darker text color for contrast */
+            width: 100%;
+            box-sizing: border-box; /* Include padding in the width */
         }
 
         ul {
@@ -123,7 +128,7 @@
     </div>
     <h1>Welcome to my Bio!</h1>
     <div class="container">
-        <div class="right">
+        <div class="about-box">
             <p>About me:</p>
             <ul>
                 <li>Age: 18</li>
