--- a/index.html
+++ b/index.html
@@ -101,14 +101,21 @@
             box-sizing: border-box; /* Include padding in the width */
         }
 
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-            font-size: 1em; /* Smaller font size for list items */
+        .about-box p {
+            font-size: 1.2em; /* Slightly larger font size */
+            font-weight: bold; /* Make it bold */
+            margin-bottom: 10px; /* Add space below the "About me" title */
         }
 
-        li {
+        .about-box ul {
+            list-style-type: none;
+            padding-left: 0;
+            font-size: 1.1em; /* Slightly larger font size */
+        }
+
+        .about-box li {
             margin-bottom: 0.5em;
+            font-weight: bold; /* Make list items bold */
         }
     </style>
 </head>
