--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
         .container {
             display: flex;
+            justify-content: space-between; /* Space between left and right sections */
             align-items: flex-start;
             width: 100%; /* Full width by default */
             max-width: 800px; /* Set a maximum width */
@@ -97,7 +98,7 @@
             padding: 15px; /* Padding inside the box */
             border: 1px solid #30363d; /* Border to match the theme */
             color: #a0aab3; /* Slightly darker text color for contrast */
-            width: 100%;
+            width: 48%; /* Take up less space to accommodate the new right section */
             box-sizing: border-box; /* Include padding in the width */
         }
 
@@ -116,6 +117,26 @@
         .about-box li {
             margin-bottom: 0.5em;
             font-weight: bold; /* Make list items bold */
+        }
+
+        .right-box {
+            width: 48%; /* Take up less space to match the about-box */
+            background-color: #161b22; /* Darker background for the right section */
+            border-radius: 10px; /* Rounded corners */
+            padding: 15px; /* Padding inside the box */
+            border: 1px solid #30363d; /* Border to match the theme */
+            color: #c9d1d9; /* Slightly lighter text color for contrast */
+            box-sizing: border-box; /* Include padding in the width */
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Center content vertically */
+        }
+
+        .right-box p {
+            font-size: 1.1em; /* Slightly larger font size */
+            font-weight: bold; /* Make it bold */
+            margin: 5px 0; /* Space between each item */
+            text-align: right; /* Align text to the right */
         }
     </style>
 </head>
@@ -142,6 +163,11 @@
                 <li>Timezone: CET</li>
                 <li>Discord: Dev1ss0</li>
             </ul>
+        </div>
+        <div class="right-box">
+            <p>HC S4 - 31.10.21 / 29.02.24</p>
+            <p>HC S5 - 3.3.24</p>
+            <p>PL CM - 4.4.24</p>
         </div>
     </div>
 </body>
