--- a/index.html
+++ b/index.html
@@ -100,12 +100,16 @@
             color: #a0aab3; /* Slightly darker text color for contrast */
             width: 48%; /* Each box takes up less space */
             box-sizing: border-box; /* Include padding in the width */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .about-box p, .right-box p {
             font-size: 1.2em; /* Slightly larger font size */
             font-weight: bold; /* Make it bold */
             margin-bottom: 10px; /* Add space below the "About me" title */
+            text-align: left; /* Ensure text aligns to the left */
         }
 
         .about-box ul {
@@ -119,17 +123,11 @@
             font-weight: bold; /* Make list items bold */
         }
 
-        .right-box {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start; /* Align content at the start */
-        }
-
         .right-box p {
             font-size: 1.1em; /* Slightly larger font size */
             font-weight: bold; /* Make it bold */
             margin: 5px 0; /* Space between each item */
-            text-align: right; /* Align text to the right */
+            text-align: left; /* Align text to the left */
         }
     </style>
 </head>
