--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
             width: 100%;
         }
 
+        .profile-image {
+            width: 150px; /* Adjust size as needed */
+            height: 150px; /* Ensure it’s square */
+            border-radius: 75px; /* Make it circular */
+            border: 3px solid #30363d; /* Border color to match theme */
+            margin: 1em 0; /* Margin to separate from text above and below */
+            display: block; /* Ensures it behaves as a block element */
+        }
+
         .container {
             display: flex;
             justify-content: space-between; /* Space between left and right sections */
@@ -128,6 +137,7 @@
             font-size: 1.1em;
             font-weight: bold;
         }
+
     </style>
 </head>
 <body>
@@ -145,6 +155,10 @@
         </div>
     </div>
     <h1>Welcome to my Bio!</h1>
+
+    <!-- Centered Image -->
+    <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Profile Picture" class="profile-image" />
+
     <div class="container">
         <div class="about-box">
             <p>About me:</p>
