--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub-Themed Website</title>
+    <title>Dev1ss0's Bio!</title>
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
@@ -136,6 +136,16 @@
             align-items: center;
             font-size: 1.1em;
             font-weight: bold;
+            margin-bottom: 10px; /* Space between rows */
+        }
+
+        .bottom-image {
+            width: 150px; /* Adjust size as needed */
+            height: 150px; /* Ensure it’s square */
+            border: 3px solid #30363d; /* Border color to match theme */
+            margin: 2em 0; /* Margin to separate from boxes */
+            display: block; /* Ensures it behaves as a block element */
+            border-radius: 10px; /* Rounded corners for the image */
         }
 
     </style>
@@ -157,7 +167,7 @@
     <h1>Welcome to my Bio!</h1>
 
     <!-- Centered Image -->
-    <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Profile Picture" class="profile-image" />
+    <img src="images/profile.jpg" alt="Profile Picture" class="profile-image" />
 
     <div class="container">
         <div class="about-box">
@@ -173,5 +183,10 @@
             <div class="row"><p>PL CM - 4.4.24</p></div>
         </div>
     </div>
+
+    <!-- Bottom Image -->
+    <img src="https://cdn.discordapp.com/attachments/1208552530448097301/1274465039138557962/Screenshot_2024-08-17-22-28-30-721_com.instagram.android.png?ex=66c2598f&is=66c1080f&hm=4fd45e3e9a9bc9773d6c659c8cdbaea7c4560581a726a58ecd94ef8e52acb8bc&" alt="Bottom Image" class="bottom-image" />
 </body>
 </html>
+
+/* CHAT GPT MY SAVIOUR */ 
