--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
 
     <!-- Bottom Image -->
-    <img src="https://cdn.discordapp.com/attachments/1208552530448097301/1274465039138557962/Screenshot_2024-08-17-22-28-30-721_com.instagram.android.png?ex=66c2598f&is=66c1080f&hm=4fd45e3e9a9bc9773d6c659c8cdbaea7c4560581a726a58ecd94ef8e52acb8bc&" alt="Bottom Image" class="bottom-image" />
+    <img src="https://cdn.discordapp.com/attachments/1208552530448097301/1274465039138557962/Screenshot_2024-08-17-22-28-30-721_com.instagram.android.png?ex=66c2598f&is=66c1080f&hm=4fd45e3e9a9bc9773d6c659c8cdbaea7c4560581a726a58ecd94ef8e52acb8bc&"/>
 </body>
 </html>
 
