--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <a href="https://www.youtube.com/@Dev1ss0" target="_blank" title="Visit Dev1ss0's YouTube Channel" class="youtube-button">
                 <i class="fab fa-youtube"></i>
             </a>
-            <a href="https://instagram.com" target="_blank" title="Visit Instagram Profile">
+            <a href="https://www.instagram.com/dev1ss0/" target="_blank" title="Visit Instagram Profile">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
@@ -167,11 +167,11 @@
     <h1>Welcome to my Bio!</h1>
 
     <!-- Centered Image -->
-    <img src="images/profile.jpg" alt="Profile Picture" class="profile-image" />
+    <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Profile Picture" class="profile-image" />
 
     <div class="container">
         <div class="about-box">
-            <p>About me:</p>
+            <p>About me :</p>
             <ul>
                 <li>Age: 18</li>
                 <li>Timezone: CET</li>
