--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dev1ss0's Bio!</title>
+    <title>Dev1ss0's Bio</title>
     <style>
         @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
@@ -148,6 +148,26 @@
             border-radius: 10px; /* Rounded corners for the image */
         }
 
+        .custom-button {
+            background-color: #161b22; /* Match the background color of the boxes */
+            color: #c9d1d9; /* Text color */
+            border: 1px solid #30363d; /* Border to match the theme */
+            border-radius: 10px; /* Rounded corners */
+            padding: 10px 20px; /* Padding for the button */
+            font-size: 1.2em; /* Slightly larger font size */
+            text-align: center;
+            width: 100%; /* Make the button as wide as the container */
+            max-width: 800px; /* Max width same as the container */
+            margin: 20px auto; /* Center horizontally and add some vertical margin */
+            cursor: pointer; /* Pointer cursor on hover */
+            text-decoration: none; /* Remove underline from text */
+            display: block; /* Make the button behave like a block-level element */
+        }
+
+        .custom-button:hover {
+            background-color: #30363d; /* Darker background on hover */
+        }
+
     </style>
 </head>
 <body>
@@ -166,12 +186,15 @@
     </div>
     <h1>Welcome to my Bio!</h1>
 
+    <!-- Custom Button -->
+    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Visit My Imgur</a>
+
     <!-- Centered Image -->
     <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Profile Picture" class="profile-image" />
 
     <div class="container">
         <div class="about-box">
-            <p>About me :</p>
+            <p>About me:</p>
             <ul>
                 <li>Age: 18</li>
                 <li>Timezone: CET</li>
@@ -184,8 +207,5 @@
         </div>
     </div>
 
-
 </body>
 </html>
-
-/* CHAT GPT MY SAVIOUR */ 
