--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             font-size: 1.2em; /* Slightly larger font size */
             text-align: center;
             width: 100%; /* Make the button as wide as the container */
+            height: 300% /* Hopefully works */
             max-width: 800px; /* Max width same as the container */
             margin: 20px auto 0; /* Center horizontally and add some vertical margin, with no margin below */
             cursor: pointer; /* Pointer cursor on hover */
