--- a/index.html
+++ b/index.html
@@ -157,7 +157,6 @@
             font-size: 1.2em; /* Slightly larger font size */
             text-align: center;
             width: 100%; /* Make the button as wide as the container */
-            height: 300% /* Hopefully works */
             max-width: 800px; /* Max width same as the container */
             margin: 20px auto 0; /* Center horizontally and add some vertical margin, with no margin below */
             cursor: pointer; /* Pointer cursor on hover */
@@ -186,12 +185,9 @@
         </div>
     </div>
     <h1>Welcome to my Bio!</h1>
-    
- <!-- Bottom Image -->
+
+     <!-- Bottom Image -->
     <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Bottom Image" class="bottom-image" />
-    
-    <!-- Custom Button -->
-    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">See my builds!!!</a>
 
     <div class="container">
         <div class="about-box">
@@ -208,6 +204,8 @@
         </div>
     </div>
 
-   
+    <!-- Custom Button Below the Boxes -->
+    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Visit My Imgur</a>
+
 </body>
 </html>
