--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
      <!-- Bottom Image -->
     <img src="https://cdn.discordapp.com/avatars/965509239567159336/fe600175c4a642a9d4a00b86760cb989.png?size=1024" alt="Bottom Image" class="bottom-image" />
 
+    <!-- Custom Button Below the Boxes -->
+    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Look at my builds!</a>
     <div class="container">
         <div class="about-box">
             <p>About me:</p>
@@ -204,8 +206,7 @@
         </div>
     </div>
 
-    <!-- Custom Button Below the Boxes -->
-    <a href="https://imgur.com/user/realDev1ss0/posts" target="_blank" class="custom-button">Visit My Imgur</a>
+    
 
 </body>
 </html>
